# voice-call

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  voice-call.code-workspace
silly-features/: environment.py
silly-features/steps/: example_steps.py
src/voice_call/: __about__.py  constants.py  log_config.py  util.py
src/voice_call/model/: model.py
